# Wombat-Firmware

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  main.c  rebuild.sh  temp_v1.cpp  temp_v1.h  wallaby.c  wallaby_bemf.c  wallaby_bemf.h  wallaby_dig.c  wallaby_dig.h  wallaby_dma.h  wallaby_i2c.c  wallaby_i2c.h  wallaby_imu.c  wallaby_init.h  wallaby_motor.c  wallaby_pid.h  wallaby_r1.h  wallaby_spi.c  wallaby_spi.h  wallaby_spi_r1.h  wallaby_spi_r2.h  wallaby_spi_r4.h  wallaby_uart.h
CMake/: GNU-ARM-Toolchain.cmake
Firmware/: CMakeLists.txt  startup_stm32f427_437xx.s
Firmware/include/: mpu9250regmap.h  wallaby.h  wallaby_adc.h  wallaby_debug.h  wallaby_imu.h  wallaby_motor.h  wallaby_r0.h  wallaby_r2.h  wallaby_servo.h  wallaby_spi.h  wallaby_spi_r3.h  wallaby_spi_r4.h
Firmware/src/: main.c  mpu9250.c  mpu9250.h  system_stm32f4xx.c  wallaby.c  wallaby_adc.c  wallaby_debug.c  wallaby_dma.c  wallaby_imu.c  wallaby_init.c  wallaby_pid.c  wallaby_servo.c  wallaby_spi.c  wallaby_uart.c
docs/: Botball_v7.brd  Botball_v7.sch  Botball_v7_BOM.csv  Wombat_BOM_rev4.xlsx  botball_v5.brd  botball_v5.sch
docs/Schematics/: Wombat Lab Schematic.brd  Wombat Lab Schematic.sch  wallaby2_r2_(old).brd  wallaby2_r2_(old).sch
libs/: CMakeLists.txt
linker/: STM32F427VITx_FLASH.ld
stm32/: stm32f4xx.h
